log/build_2025-03-19_03-45-57/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishdepth.py", line 76
    if depth > 10
                 ^
SyntaxError: expected ':'

